--- a/semester-1/week-8.html
+++ b/semester-1/week-8.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <title>A-I: S1-W8</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/assets/styles.css">
+
     <base href="/algorithmic-identities/">
+
+    <link rel="icon" href="favicon.png" />
+    <link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">
 </head>
 
 <body>
@@ -17,7 +19,7 @@
         <!-- FIXED LEFT NAV BAR -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
@@ -33,21 +35,21 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="/semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
-                        <li><a href="/semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
-                        <li><a href="/semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
-                        <li><a href="/semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
-                        <li><a href="/semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
-                        <li><a href="/semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
-                        <li><a href="/semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
-                        <li><a href="/semester-1/week-8.html" class="active"><strong>W8</strong> : E-2</a></li>
-                        <li><a href="/semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
-                        <li><a href="/semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
-                        <li><a href="/semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
-                        <li><a href="/semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="/semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="/semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="/semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="semester-1/week-8.html" class="active"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -58,15 +60,15 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="/semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="/semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="/semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
+                        <li><a href="semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
+                        <li><a href="semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                     </ul>
                 </div>
 
-                <div class="nav-group"><a class="nav-link" href="/catalogue.html">Catalogue of Making</a></div>
-                <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
-                <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
+                <div class="nav-group"><a class="nav-link" href="catalogue.html">Catalogue of Making</a></div>
+                <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
+                <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
             </nav>
 
             <div class="left-rail-footer">
@@ -106,13 +108,13 @@
             <!-- 3 COLUMNS -->
             <section class="exp-row cols-3" style="margin-bottom: 20px;">
                 <div class="exp-block">
-                    <img src="/assets/images/sonya-1.jpg">
+                    <img src="assets/images/sonya-1.jpg">
                 </div>
                 <div class="exp-block">
-                    <img src="/assets/images/sonya-3.jpg">
+                    <img src="assets/images/sonya-3.jpg">
                 </div>
                 <div class="exp-block">
-                    <img src="/assets/images/sony-4.jpg">
+                    <img src="assets/images/sony-4.jpg">
                 </div>
             </section>
 
@@ -120,7 +122,7 @@
             <section class="exp-row full">
                 <a href="https://www.sonyarapoport.org/shoefield" target="_blank"
                     style="text-decoration: none; color: inherit;">
-                    <img src="/assets/images/sonya-2.jpeg" alt="">
+                    <img src="assets/images/sonya-2.jpeg" alt="">
                     <figcaption style="font-size: 12px; text-align: left;">
                         <strong>Shoe-Field Map</strong><em> Sonya Rapoport 1982</em>
                     </figcaption>
@@ -167,7 +169,7 @@
 
                 <div class="exp-block">
                     <div class="exp-block" style="overflow:hidden;">
-                        <video src="/assets/videos/e2-hover.mp4" autoplay muted loop playsinline alt=""
+                        <video src="assets/videos/e2-hover.mp4" autoplay muted loop playsinline alt=""
                             style="width:100%; object-fit:contain; flex:1; transform-origin:center; margin-bottom:20px; border: 0;"></video>
                     </div>
                     <p>Expanding from <strong>Prototype 1: Feed Your Garden's</strong>, where user words plant a seed
@@ -196,7 +198,7 @@
                         Try Experiment 2
                     </a>
                     <!-- BUTTON: Link to Experiment 2's Catalogue of Making -->
-                    <a href="/experiments/experiment-2.html" class="launch-btn-revert"
+                    <a href="experiments/experiment-2.html" class="launch-btn-revert"
                         style="font-size: 14px; padding:6px 14px; margin-top:20px; display:inline-block;">
                         Catalogue of Making (Experiment 2)
                     </a>
@@ -205,7 +207,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-20px;">
-                <img src="/assets/images/w8-e2.png" alt="" style="object-fit: contain;">
+                <img src="assets/images/w8-e2.png" alt="" style="object-fit: contain;">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>Text Reduction</strong><em>
                         p5.js</em></figcaption>
             </section>
@@ -256,19 +258,19 @@
             <section class="exp-row cols-4">
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/e2-1.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/e2-1.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/e2-2.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/e2-2.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/e2-5.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/e2-5.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/e2-4.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/e2-4.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
             </section>
@@ -327,15 +329,20 @@
 
 
     <!-- ACCORDION SCRIPT -->
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
+
+            /* -----------------------------
+               1) LEFT NAV ACCORDION TOGGLES
+            ------------------------------ */
             document.querySelectorAll(".overview-group").forEach(group => {
                 const toggleBtn = group.querySelector(".nav-toggle");
                 const symbol = group.querySelector(".nav-toggle-symbol");
 
                 if (!toggleBtn || !symbol) return;
 
-                // init closed
+                // default closed
                 group.classList.remove("is-open");
                 toggleBtn.setAttribute("aria-expanded", "false");
                 symbol.textContent = "+";
@@ -346,57 +353,63 @@
                     symbol.textContent = isOpen ? "−" : "+";
                 });
             });
-        });
-    </script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
 
-            // Match /semester-1/week-1.html, /semester-1/week-2.html, etc.
-            const m = window.location.pathname.match(/week-(\d+)\.html$/);
-            const current = m ? parseInt(m[1], 10) : 1;
-
+            /* -----------------------------
+               2) BOTTOM-RIGHT WEEK NAV
+            ------------------------------ */
             const prev = document.getElementById("prevWeek");
             const next = document.getElementById("nextWeek");
             const topBtn = document.getElementById("topBtn");
 
-            if (prev) {
-                prev.addEventListener("click", () => {
-                    if (current > 1) {
-                        window.location.href = `week-${current - 1}.html`; // stays in semester-1 folder
-                    }
-                });
-            }
-
-            if (next) {
-                next.addEventListener("click", () => {
-                    window.location.href = `week-${current + 1}.html`;
-                });
-            }
-
+            // Scroll to top
             if (topBtn) {
                 topBtn.addEventListener("click", () => {
                     window.scrollTo({ top: 0, behavior: "smooth" });
                 });
             }
 
-        });
-        /* Scroll to top */
-        document.getElementById("topBtn").addEventListener("click", () => {
-            window.scrollTo({ top: 0, behavior: "smooth" });
-        });
+            // Detect semester + week from URL
+            // Works with GitHub Pages paths like:
+            // /algorithmic-identities/semester-1/week-15.html
+            const path = window.location.pathname;
+            const match = path.match(/semester-(\d+)\/week-(\d+)\.html$/);
 
-        const group = document.querySelector(".overview-group");
-        const btn = document.getElementById("overviewToggle");
-        const symbol = document.getElementById("overviewSymbol");
+            // If this page is NOT a week page, just stop here.
+            if (!match) return;
 
-        btn.setAttribute("aria-expanded", "false");
-        symbol.textContent = "+";
+            const semester = parseInt(match[1], 10);
+            const currentWeek = parseInt(match[2], 10);
 
-        btn.addEventListener("click", () => {
-            const isOpen = group.classList.toggle("is-open");
-            btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-            symbol.textContent = isOpen ? "−" : "+";
+            // Set last week per semester (edit SEM 2 when ready)
+            const LAST_WEEK_BY_SEMESTER = {
+                1: 15,
+                2: 15
+            };
+            const lastWeek = LAST_WEEK_BY_SEMESTER[semester] ?? 15;
+
+            // Prev button
+            if (prev) {
+                if (currentWeek <= 1) {
+                    prev.style.display = "none";
+                } else {
+                    prev.addEventListener("click", () => {
+                        window.location.href = `semester-${semester}/week-${currentWeek - 1}.html`;
+                    });
+                }
+            }
+
+            // Next button
+            if (next) {
+                if (currentWeek >= lastWeek) {
+                    next.style.display = "none";
+                } else {
+                    next.addEventListener("click", () => {
+                        window.location.href = `semester-${semester}/week-${currentWeek + 1}.html`;
+                    });
+                }
+            }
+
         });
     </script>
 
